--- a/docker/server/config/config-mysql-grpc.properties
+++ b/docker/server/config/config-mysql-grpc.properties
@@ -17,13 +17,13 @@ conductor.grpc-server.enabled=true
 # Database persistence model.
 conductor.db.type=mysql
 
-conductor.mysql.jdbcUrl=jdbc:mysql://mysql:3306/conductor
-conductor.mysql.jdbcUsername=conductor
-conductor.mysql.jdbcPassword=conductor
+spring.datasource.url=jdbc:mysql://mysql:3306/conductor
+spring.datasource.username=conductor
+spring.datasource.password=conductor
 
 # Hikari pool sizes are -1 by default and prevent startup
-conductor.mysql.connectionPoolMaxSize=10
-conductor.mysql.connectionPoolMinIdle=2
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
 
 # Elastic search instance indexing is enabled.
 conductor.indexing.enabled=true
