allow retrying timed_out workflow with no unsuccessful tasks

--- a/core/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/core/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -44,7 +44,7 @@
     },
     {
       "name": "conductor.workflow-monitor.enabled",
-      "type": "java.lang.Integer",
+      "type": "java.lang.Boolean",
       "description": "Enables the workflow monitor that publishes workflow and task metrics.",
       "defaultValue": "true",
       "sourceType": "com.netflix.conductor.metrics.WorkflowMonitor"
