Updated Jar name to reflect the functionality
conductor*-boot.jar would be conductor*-secure-boot.jar to reflect the OAuth2.o security feature functionality

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -55,5 +55,5 @@ jar {
 
 bootJar {
     mainClassName = 'com.netflix.conductor.Conductor'
-    classifier = 'boot'
+    classifier = 'secure-boot'
 }
