Added Oracle Persistence Docker Compose

--- a/docker/server/config/config-oracle.properties
+++ b/docker/server/config/config-oracle.properties
@@ -4,10 +4,12 @@ conductor.grpc-server.enabled=false
 # Database persistence type.
 conductor.db.type=oracle
 
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/ORCLPDB1.localdomain
-#spring.datasource.url=jdbc:oracle:thin:@//oracle:1521/CONDUCTOR.localdomain
+spring.datasource.url=jdbc:oracle:thin:@//oracle:1521/CONDUCTOR
 spring.datasource.username=conductor
 spring.datasource.password=conductor
+
+#conductor.oracle.flywayBaselineOnMigrate=true
+#conductor.oracle.flywayBaselineVersion=0
 
 # Hikari pool sizes are -1 by default and prevent startup
 spring.datasource.hikari.maximum-pool-size=10
