--- a/docker/server/config/config-oracle.properties
+++ b/docker/server/config/config-oracle.properties
@@ -16,7 +16,7 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 
 # Elastic search instance indexing is enabled.
-conductor.indexing.enabled=false
+conductor.indexing.enabled=true
 
 # Transport address to elasticsearch
 conductor.elasticsearch.url=http://elasticsearch:9200
