--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,9 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
+      - name: Cleanup Disk Space
+        run: |
+          apt-get clean
       - name: Gradle wrapper validation
         uses: gradle/wrapper-validation-action@v1
       - name: Set up Zulu JDK 11
