--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
           fetch-depth: 0
       - name: Cleanup Disk Space
         run: |
-          apt-get clean
+          sudo apt-get clean
       - name: Gradle wrapper validation
         uses: gradle/wrapper-validation-action@v1
       - name: Set up Zulu JDK 11
