--- a/docker/server/config/config-oracle.properties
+++ b/docker/server/config/config-oracle.properties
@@ -13,14 +13,14 @@ conductor.db.type=oracle
 spring.flyway.locations=classpath:db/migration_oracle
 
 # While using base docker image - conductorboot/oracle:19.3.0-ee-slim
-spring.datasource.url=jdbc:oracle:thin:@//oracle:1521/CONDUCTOR
-spring.datasource.username=conductor
-spring.datasource.password=conductor
+#spring.datasource.url=jdbc:oracle:thin:@//oracle:1521/CONDUCTOR
+#spring.datasource.username=conductor
+#spring.datasource.password=conductor
 
 # While using pre-configured test image - conductorboot/oracle:19.3.0-ee-slim-test
-#spring.datasource.url=jdbc:oracle:thin:@//oracle:1521/JUNIT
-#spring.datasource.username=junit_user
-#spring.datasource.password=junit_user
+spring.datasource.url=jdbc:oracle:thin:@//oracle:1521/JUNIT
+spring.datasource.username=junit_user
+spring.datasource.password=junit_user
 
 ## Used for JUnits -- Document purpose only - of no practical runtime use.
 #spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/XE
