--- a/test-harness/build.gradle
+++ b/test-harness/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     testImplementation "org.testcontainers:elasticsearch:${revTestContainer}"
     testImplementation "org.testcontainers:mysql:${revTestContainer}"
     testImplementation "org.testcontainers:postgresql:${revTestContainer}"
+    testImplementation "org.testcontainers:oracle-xe:${revTestContainer}"
 }
 
 test {
