--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,7 @@ rootProject.name='conductor'
 
 include 'client','common','contribs','core','es5-persistence','es6-persistence','es7-persistence','jersey','postgres-persistence','zookeeper-lock','redis-lock'
 include 'cassandra-persistence', 'mysql-persistence', 'redis-persistence','server','test-harness','ui'
-include 'grpc', 'grpc-server', 'grpc-client'
+include 'grpc', 'grpc-server', 'grpc-client', 'sqlserver-persistence'
 
 rootProject.children.each {it.name="conductor-${it.name}"}
 
