--- a/sqlserver-persistence/docker-compose.yml
+++ b/sqlserver-persistence/docker-compose.yml
@@ -1,31 +1,10 @@
 version: '3.1'
 
 services:
-
-  mysqldb:
-    image: mysql
-    restart: always
-    ports:
-      - "33307:3306"
-    volumes:
-      - ".docker/mysqldb/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d"
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-
-  postgresdb:
-    image: postgres
-    restart: always
-    ports:
-      - "54320:5432"
-    volumes:
-      - ".docker/postgresdb/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d"
-    environment:
-      POSTGRES_PASSWORD: postgres
-
   sqlserver:
     image: conductor:sqlserver
     build: 
-      context: ../sqlserver-persistence/docker
+      context: ./docker
       dockerfile: sqlserver/Dockerfile
     restart: always
     ports:
@@ -40,3 +19,4 @@ services:
       MSSQL_SA_PASSWORD: "Password1"
       MSSQL_PID: 'Developer'
       MSSQL_AGENT_ENABLED: 'false'
+    restart: always
