--- a/test-harness/build.gradle
+++ b/test-harness/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     testImplementation project(':conductor-mysql-persistence')
     testImplementation project(':conductor-postgres-persistence')
     testImplementation project(':conductor-cassandra-persistence')
+    testImplementation project(':conductor-sqlserver-persistence')
     testImplementation project(':conductor-es6-persistence')
     testImplementation project(':conductor-grpc-server')
     testImplementation project(':conductor-client')
