es7-persistence module migration from 2.31.4 to 3.0.6

--- a/settings.gradle
+++ b/settings.gradle
@@ -41,7 +41,8 @@ include 'redis-persistence'
 include 'mysql-persistence'
 include 'postgres-persistence'
 
-include 'es6-persistence'
+//include 'es6-persistence'
+include 'es7-persistence'
 
 include 'redis-lock'
 include 'zookeeper-lock'
