--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,8 @@ subprojects {
 apply from: "$rootDir/dependencies.gradle"
 
 // change the ES version used by Spring Boot Dependency Management plugin
-ext['elasticsearch.version'] = revElasticSearch6
+//ext['elasticsearch.version'] = revElasticSearch6
+ext['elasticsearch.version'] = revElasticSearch7
 
 allprojects {
     apply plugin: 'nebula.netflixoss'
