--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -47,7 +47,8 @@ conductor.elasticsearch.url=localhost:9300
 conductor.elasticsearch.indexName=conductor
 
 #Elasticsearch major release version.
-conductor.elasticsearch.version=6
+#conductor.elasticsearch.version=6
+conductor.elasticsearch.version=7
 
 # Default event queue type to listen on for wait task
 conductor.default-event-queue.type=sqs
