set ext['elasticsearch.version'] explicitly to avoid conflicts

--- a/es6-persistence/build.gradle
+++ b/es6-persistence/build.gradle
@@ -11,6 +11,8 @@
  *  specific language governing permissions and limitations under the License.
  */
 
+ext['elasticsearch.version'] = revElasticSearch6
+
 dependencies {
     implementation project(':conductor-common')
     implementation project(':conductor-core')
