--- a/test-harness/build.gradle
+++ b/test-harness/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'groovy'
 
+ext['elasticsearch.version'] = revElasticSearch6
+//ext['elasticsearch.version'] = revElasticSearch7
+
 dependencies {
     testImplementation project(':conductor-server')
     testImplementation project(':conductor-common')
