add more logging

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -91,7 +91,7 @@ conductor.workflow-execution-lock.type=noop_lock
 #conductor.event-queues.amqp.listenerQueuePrefix=myqueue
 # Use durable queue ?
 #conductor.event-queues.amqp.durable=false
-# Use exclusive queue ?
+# Use exclusive queue ?https://docs.spring.io/spring-boot/docs/current/reference/html/spring-boot-features.html#boot-features-external-config
 #conductor.event-queues.amqp.exclusivee=false
 # Enable support of priorities on queue. Set the max priority on message.
 # Setting is ignored if the value is lower or equals to 0
