Add jcenter to fix missing dependencies from netflix repo
Quickfix to: https://github.com/Netflix/conductor/issues/2446

... just add jcenter repo (it should work for downloads) since netflix
repo no longer holds some of the dependencies of conductor

Signed-off-by: Maros Marsalek <mmarsalek@frinx.io>

--- a/build.gradle
+++ b/build.gradle
@@ -77,16 +77,10 @@ allprojects {
          * This repository locates artifacts that don't exist in maven central but we had to backup from jcenter
          * The exclusiveContent
          */
-        exclusiveContent {
-            forRepository {
                 maven {
                     url "https://artifactory-oss.prod.netflix.net/artifactory/required-jcenter-modules-backup"
                 }
-            }
-            filter {
-                includeGroupByRegex "com\\.github\\.vmg.*"
-            }
-        }
+	jcenter()
     }
 
     dependencyManagement {
