added clusteHealthColor and es version to config

--- a/docker/server/config/config-mysql.properties
+++ b/docker/server/config/config-mysql.properties
@@ -15,8 +15,15 @@ spring.datasource.hikari.minimum-idle=2
 # Elastic search instance indexing is enabled.
 conductor.indexing.enabled=true
 
+# Elastic search version (6 || 7)
+conductor.elasticsearch.version=6
+
 # Transport address to elasticsearch
 conductor.elasticsearch.url=http://es:9200
+
+# cluster health check
+# related: https://github.com/Netflix/conductor/pull/2291#discussion_r685531625
+conductor.elasticsearch.clusteHealthColor=yellow
 
 # Name of the elasticsearch cluster
 conductor.elasticsearch.indexName=conductor
