Remove `conductor.indexing.enabled=true`
Causes error after first docker-compose up. 
Error information: 
Error starting ApplicationContext. To display the conditions report re-run your application with 'debug' enabled.
72356 [main] ERROR org.springframework.boot.SpringApplication [] - Application run failed
org.springframework.beans.factory.UnsatisfiedDependencyException: Error creating bean with name 'workflowBulkResource' defined in URL [jar:file:/app/libs/conductor-server-3.1.0-SNAPSHOT-boot.jar!/BOOT-INF/lib/conductor-rest-3.1.0-SNAPSHOT.jar!/com/netflix/conductor/rest/controllers/WorkflowBulkResource.class]: Unsatisfied dependency expressed through constructor parameter 0; nested exception is org.springframework.beans.factory.UnsatisfiedDependencyException: Error creating bean with name 'workflowBulkServiceImpl' defined in URL [jar:file:/app/libs/conductor-server-3.1.0-SNAPSHOT-boot.jar!/BOOT-INF/lib/conductor-core-3.1.0-SNAPSHOT.jar!/com/netflix/conductor/service/WorkflowBulkServiceImpl.class]: Unsatisfied dependency expressed through constructor parameter 0; nested exception is org.springframework.beans.factory.UnsatisfiedDependencyException: Error creating bean with name 'workflowExecutor' defined in URL [jar:file:/app/libs/conductor-server-3.1.0-SNAPSHOT-boot.jar!/BOOT-INF/lib/conductor-core-3.1.0-SNAPSHOT.jar!/com/netflix/conductor/core/execution/WorkflowExecutor.class]: Unsatisfied dependency expressed through constructor parameter 5; nested exception is org.springframework.beans.factory.UnsatisfiedDependencyException: Error creating bean with name 'executionDAOFacade' defined in URL [jar:file:/app/libs/conductor-server-3.1.0-SNAPSHOT-boot.jar!/BOOT-INF/lib/conductor-core-3.1.0-SNAPSHOT.jar!/com/netflix/conductor/core/orchestration/ExecutionDAOFacade.class]: Unsatisfied dependency expressed through constructor parameter 2; nested exception is org.springframework.beans.factory.BeanCreationException: Error creating bean with name 'es6IndexDAO': Invocat

--- a/docker/server/config/config-mysql.properties
+++ b/docker/server/config/config-mysql.properties
@@ -12,8 +12,9 @@ spring.datasource.password=conductor
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=2
 
+# disabled: it causes error after second docker-compose up
 # Elastic search instance indexing is enabled.
-conductor.indexing.enabled=true
+# conductor.indexing.enabled=true
 
 # Elastic search version (6 || 7)
 conductor.elasticsearch.version=6
