--- a/client/src/test/resources/config.properties
+++ b/client/src/test/resources/config.properties
@@ -6,3 +6,6 @@ conductor.worker.workerB.batchSize=84
 conductor.worker.workerB.domain=domainB
 conductor.worker.Test.paused=true
 conductor.worker.domainTestTask2.domain=visinghDomain
+conductor.worker.task_run_always.poll.out.of.discovery=true
+conductor.worker.task_explicit_do_not_run_always.poll.out.of.discovery=false
+conductor.worker.task_ignore_override.poll.out.of.discovery=true
