--- a/docker/server/config/config-mysql.properties
+++ b/docker/server/config/config-mysql.properties
@@ -16,7 +16,7 @@ spring.datasource.hikari.minimum-idle=2
 # Elastic search instance indexing is enabled.
 # conductor.indexing.enabled=true
 
-# Elastic search version (6 || 7)
+# Elastic search version
 conductor.elasticsearch.version=6
 
 # Transport address to elasticsearch
@@ -24,7 +24,7 @@ conductor.elasticsearch.url=http://es:9200
 
 # cluster health check
 # related: https://github.com/Netflix/conductor/pull/2291#discussion_r685531625
-conductor.elasticsearch.clusteHealthColor=yellow
+conductor.elasticsearch.clusterHealthColor=yellow
 
 # Name of the elasticsearch cluster
 conductor.elasticsearch.indexName=conductor
