Add redis-lock dep

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation project(':conductor-es6-persistence')
     implementation(project(path: ':conductor-es7-persistence', configuration: 'shadow'))
     implementation project(':conductor-grpc-server')
+    implementation project(':conductor-redis-lock')
 
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
