Migrate conductor JAXB dependency from javax. to jakarta
The conductor has JAXB dependency on javax.* which should be migrated
to jakarta.*.

Signed-off-by: Tao Jiang <taoj@vmware.com>

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -46,6 +46,8 @@ dependencies {
 
     runtimeOnly 'com.netflix.spectator:spectator-reg-micrometer'
 
+    runtimeOnly "org.glassfish.jaxb:jaxb-runtime:${revJAXB}"
+
     testImplementation project(':conductor-rest')
     testImplementation project(':conductor-common')
     testImplementation "io.grpc:grpc-testing:${revGrpc}"
