Disable system task workers for integration tests and remove ignored test

--- a/test-harness/src/test/resources/application-integrationtest.properties
+++ b/test-harness/src/test/resources/application-integrationtest.properties
@@ -23,7 +23,7 @@ conductor.app.appId=conductor
 
 conductor.app.workflow-offset-timeout=30s
 
-conductor.system-task-workers.enabled=true
+conductor.system-task-workers.enabled=false
 conductor.app.system-task-worker-callback-duration=0
 
 conductor.app.event-message-indexing-enabled=true
