--- a/contribs/build.gradle
+++ b/contribs/build.gradle
@@ -10,7 +10,6 @@
  *  an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
  *  specific language governing permissions and limitations under the License.
  */
-
 dependencies {
     implementation project(':conductor-common')
     implementation project(':conductor-core')
@@ -29,6 +28,10 @@ dependencies {
     implementation "javax.ws.rs:jsr311-api:${revJsr311Api}"
 
     implementation "org.apache.kafka:kafka-clients:${revKafka}"
+
+    implementation "io.confluent:kafka-avro-serializer:${revConfluent}"
+
+    implementation "org.apache.avro:avro:${revAvro}"
 
     implementation "com.rabbitmq:amqp-client:${revAmqpClient}"
 
