--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -61,4 +61,6 @@ ext {
     revSpock = '1.3-groovy-2.5'
     revSpotifyCompletableFutures = '0.3.3'
     revTestContainer = '1.15.3'
+    revConfluent = '5.3.0'
+    revAvro = '1.10.2'
 }
