--- a/settings.gradle
+++ b/settings.gradle
@@ -48,6 +48,7 @@ include 'redis-lock'
 include 'zookeeper-lock'
 
 include 'azureblob-storage'
+include 'google-cloud-storage'
 
 include 'rest'
 include 'grpc'
