Fixes #2446 - Move the protogen annotations to local code and make it more like a monorepo. `protogen` dependencies are not published in maven central and clients using it will run into jar lookup issues

--- a/settings.gradle
+++ b/settings.gradle
@@ -29,6 +29,9 @@ gradleEnterprise {
 
 rootProject.name = 'conductor'
 
+include 'annotations'
+include 'annotations-processor'
+
 include 'server'
 include 'common'
 include 'core'
