Support for sequential and parallel processing of messages

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -84,8 +84,9 @@ conductor.workflow-execution-lock.type=noop_lock
 #conductor.event-queues.amqp.port=5672
 #conductor.event-queues.amqp.useNio=false
 #conductor.event-queues.amqp.batchSize=1
-
 #conductor.event-queues.amqp.pollTimeDuration=100ms
+#conductor.event-queues.amqp.queueType=classic
+#conductor.event-queues.amqp.sequentialMsgProcessing=true
 
 #conductor.event-queues.amqp.useExchange=true( exchange or queue)
 #conductor.event-queues.amqp.listenerQueuePrefix=myqueue
