--- a/settings.gradle
+++ b/settings.gradle
@@ -59,6 +59,7 @@ include 'grpc'
 include 'grpc-server'
 include 'grpc-client'
 
+include 'java-sdk'
 include 'test-harness'
 
 rootProject.children.each {it.name="conductor-${it.name}"}
