--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,31 @@ configure(javaProjects) {
     targetCompatibility = 1.8
 
     dependencies {
+        implementation('org.apache.logging.log4j:log4j-core') {
+            version {
+                strictly '2.16.0'
+            }
+        }
+        implementation('org.apache.logging.log4j:log4j-api') {
+            version {
+                strictly '2.16.0'
+            }
+        }
+        implementation('org.apache.logging.log4j:log4j-slf4j-impl') {
+            version {
+                strictly '2.16.0'
+            }
+        }
+        implementation('org.apache.logging.log4j:log4j-jul') {
+            version {
+                strictly '2.16.0'
+            }
+        }
+        implementation('org.apache.logging.log4j:log4j-web') {
+            version {
+                strictly '2.16.0'
+            }
+        }
         testCompile "junit:junit:${revJUnit}"
         testCompile("org.mockito:mockito-core:${revMockito}") {
             exclude group: 'org.hamcrest', module: 'hamcrest-core'
