--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -87,6 +87,10 @@ conductor.workflow-execution-lock.type=noop_lock
 #conductor.event-queues.amqp.pollTimeDuration=100ms
 #conductor.event-queues.amqp.queueType=classic
 #conductor.event-queues.amqp.sequentialMsgProcessing=true
+#conductor.event-queues.amqp.networkRecoveryIntervalInMilliSecs=60000
+#conductor.event-queues.amqp.requestHeartbeatTimeoutInSecs=30
+#conductor.event-queues.amqp.handshakeTimeoutInSecs=60
+#conductor.event-queues.amqp.connectionTimeout=180
 
 #conductor.event-queues.amqp.useExchange=true( exchange or queue)
 #conductor.event-queues.amqp.listenerQueuePrefix=myqueue
