--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -39,6 +39,12 @@ conductor.redis.queuesNonQuorumPort=22122
 
 # For a single node dynomite or redis server, make sure the value below is set to same as rack specified in the "workflow.dynomite.cluster.hosts" property.
 conductor.redis.availabilityZone=us-east-1c
+#conductor.redis.maxIdleConnections=8
+#conductor.redis.minIdleConnections=5
+#conductor.redis.minEvictableIdleTimeMillis = 1800000
+#conductor.redis.timeBetweenEvictionRunsMillis = -1L
+#conductor.redis.testWhileIdle = false
+#conductor.redis.numTestsPerEvictionRun = 3
 
 #Transport address to elasticsearch
 conductor.elasticsearch.url=localhost:9300
@@ -52,7 +58,7 @@ conductor.elasticsearch.version=6
 
 # Default event queue type to listen on for wait task
 conductor.default-event-queue.type=sqs
-
+	
 #zookeeper
 # conductor.zookeeper-lock.connectionString=host1.2181,host2:2181,host3:2181
 # conductor.zookeeper-lock.sessionTimeoutMs
