add support to kafka IAM-tls add version

--- a/contribs/build.gradle
+++ b/contribs/build.gradle
@@ -19,7 +19,7 @@ dependencies {
 
     implementation "com.amazonaws:aws-java-sdk-s3:${revAwsSdk}"
     implementation "com.amazonaws:aws-java-sdk-sqs:${revAwsSdk}"
-    implementation "software.amazon.msk:aws-msk-iam-auth"
+    implementation "software.amazon.msk:aws-msk-iam-auth:1.1.1"
 
     implementation "org.apache.commons:commons-lang3:"
 
