--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -53,6 +53,7 @@ nav:
             - Starting a Workflow: how-tos/Workflows/starting-workflows.md
             - Updating Workflows: how-tos/Workflows/updating-workflows.md
             - View Workflow Execution: how-tos/Workflows/view-workflow-executions.md
+            - Versioning Workflows: how-tos/Workflows/versioning-workflows.md
         - Tasks:
             - Creating Task Definitions: how-tos/Tasks/creating-tasks.md
             - Dynamic vs Switch Tasks: how-tos/Tasks/dynamic-vs-switch-tasks.md
@@ -68,6 +69,8 @@ nav:
             -Build a Python Task Worker: how-tos/Workers/build-a-python-task-worker.md
         - Monitoring:
             - Conductor Log Level: how-tos/Monitoring/Conductor-LogLevel.md
+    - Code Labs:
+        - Hello World: codelab/helloworld.md
     - Developer Labs:
         - Beginner: labs/beginner.md
         - A First Workflow: labs/running-first-workflow.md
