--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Publish snapshot build
         run:  |
           CONDUCTOR_VERSION=$(./gradlew properties --no-daemon --console=plain -q | grep "^version:" | awk '{printf $2}')
-          echo "::set-output name=CONDUCTOR_VERSION::$CONDUCTOR_VERSION"
+          echo "conductor version is $CONDUCTOR_VERSION"
           ./gradlew publish -x test
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
