--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,10 @@ allprojects {
     targetCompatibility = JavaVersion.VERSION_11
 
     group = 'com.netflix.conductor'
+    if (System.getenv('CONDUCTOR_VERSION')) {
+        version = System.getenv('CONDUCTOR_VERSION')
+        println "Inferred version from env variable 'CONDUCTOR_VERSION': $version"
+    }
 
     configurations.all {
         exclude group: 'ch.qos.logback', module: 'logback-classic'
