--- a/ui/package.json
+++ b/ui/package.json
@@ -2,27 +2,31 @@
   "name": "client",
   "version": "3.5.0",
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@material-ui/styles": "^4.10.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
     "@monaco-editor/react": "^4.3.1",
     "clsx": "^1.1.1",
     "d3": "^6.2.0",
     "dagre-d3": "^0.6.4",
     "date-fns": "^2.16.1",
+    "fontsource-roboto": "^4.0.0",
+    "formik": "^2.2.9",
     "http-proxy-middleware": "^2.0.1",
     "immutability-helper": "^3.1.1",
+    "json-bigint-string": "^1.0.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "parse-svg-path": "^0.1.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
+    "react-cron-generator": "^1.3.5",
     "react-data-table-component": "^6.11.8",
     "react-dom": "^16.8.0",
     "react-helmet": "^6.1.0",
     "react-is": "^17.0.2",
-    "react-json-view": "^1.19.1",
+    "react-json-view": "^1.21.3",
     "react-query": "^3.19.4",
     "react-resize-detector": "^5.2.0",
     "react-router": "^5.2.0",
@@ -35,7 +39,8 @@
     "ttl-localstorage": "^1.5.4",
     "url-parse": "^1.5.1",
     "use-local-storage-state": "^10.0.0",
-    "xss": "^1.0.8"
+    "xss": "^1.0.8",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
