--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
     "@material-ui/styles": "^4.11.4",
     "@monaco-editor/react": "^4.3.1",
     "clsx": "^1.1.1",
+    "cronstrue": "^1.72.0",
     "d3": "^6.2.0",
     "dagre-d3": "^0.6.4",
     "date-fns": "^2.16.1",
@@ -32,7 +33,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-use-location-state": "^2.5.0",
     "react-scripts": "4.0.3",
-    "react-vis-timeline": "^2.0.3",
+    "react-vis-timeline-2": "^2.1.6",
     "rison": "^0.1.1",
     "styled-components": "^5.3.0",
     "url-parse": "^1.5.1",
@@ -60,11 +61,14 @@
     ]
   },
   "resolutions": {
-    "vis-timeline": "7.3.6",
     "immer": "^9.0.6",
     "ansi-html": "^0.0.8",
     "glob-parent": "^5.1.2",
-    "node-forge": "^1.3.0"
+    "node-forge": "^1.3.0",
+    "validator": "^13.7.0",
+    "nth-check": "^2.0.1",
+    "browserslist": "^4.16.5",
+    "async": "^3.2.2"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.2.0",
