--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -59,4 +59,6 @@ ext {
     revSpock = '1.3-groovy-2.5'
     revSpotifyCompletableFutures = '0.3.3'
     revTestContainer = '1.15.3'
+    revJAXRS = '2.1.1'
+    revJerseyCommon = '2.22.2'
 }
