--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Conductor
+site_name: Conductor Documentation
 
 repo_url: https://github.com/Netflix/conductor
 edit_uri: ''
@@ -7,53 +7,19 @@ use_directory_urls: false
 
 nav:
   - Getting Started:
-    - Running Conductor Locally: gettingstarted/server.md
-    - Installing via Docker Compose: gettingstarted/running-locally-docker.md
+    - Running Conductor Locally: gettingstarted/local.md
+    - Installing via Docker Compose: gettingstarted/docker.md
     - Basic Concepts: gettingstarted/basicconcepts.md
+    - High Level Steps: gettingstarted/steps.md
     - Using the Client: gettingstarted/client.md
     - Start a Workflow: gettingstarted/startworkflow.md
-  - Documentation: 
-    - Architecture: architecture.md
-    - Configuration:
-      - Task Definition: configuration/taskdef.md
-      - Worker Definition: configuration/workerdef.md
-      - Workflow Definition: configuration/workflowdef.md
-      - System Tasks: configuration/systask.md
-      - System Operators: configuration/sysoperator.md
-      - Event Handlers: configuration/eventhandlers.md
-      - Task Domains: configuration/taskdomains.md
-      - Isolation Groups: configuration/isolationgroups.md
-    - API Specification: apispec.md
-    - Operators:
-      -  Do/While: reference-docs/do-while-task.md
-      -  Dynamic: reference-docs/dynamic.md
-      -  Dynamic Fork: reference-docs/dynamic-fork-task.md
-      -  Fork: reference-docs/fork-task.md
-      -  Join:    reference-docs/join-task.md
-      -  Set Variable:  reference-docs/set-variable-task.md
-      -  Start Workflow: reference-docs/start-workflow-task.md
-      -  Sub Workflow: reference-docs/sub-workflow-task.md
-      -  Switch: reference-docs/switch-task.md
-      -  Terminate: reference-docs/terminate-task.md
-      -  Wait: reference-docs/wait-task.md
-    - System Tasks:
-      - Event Task: reference-docs/event-task.md
-      - HTTP Task: reference-docs/http-task.md
-      - Inline Task: reference-docs/inline-task.md
-      - JSON JQ Transform Task: reference-docs/json-jq-transform-task.md
-      - Kafka Publish Task: reference-docs/kafka-publish-task.md
-    - Conductor Metrics:
-      - Server Metrics: metrics/server.md
-      - Client Metrics: metrics/client.md
-    - Extending Conductor: extend.md
-    - Task Lifecycle: tasklifecycle.md
-    - External Payload Storage: externalpayloadstorage.md
+    - Why Conductor?: gettingstarted/intro.md
     - How-Tos:
       - Workflows:
         - Debugging Workflows: how-tos/Workflows/debugging-workflows.md
-        - Handliing Errors: how-tos/Workflows/handling-errors.md
+        - Handling Errors: how-tos/Workflows/handling-errors.md
         - Searching Workflows: how-tos/Workflows/searching-workflows.md
-        - Starting a Workflow: how-tos/Workflows/starting-workflows.md
+        - Starting Workflows: how-tos/Workflows/starting-workflows.md
         - Updating Workflows: how-tos/Workflows/updating-workflows.md
         - View Workflow Execution: how-tos/Workflows/view-workflow-executions.md
         - Versioning Workflows: how-tos/Workflows/versioning-workflows.md
@@ -76,18 +42,61 @@ nav:
     - Developer Labs:
       - Beginner: labs/beginner.md
       - A First Workflow: labs/running-first-workflow.md
-      - A First Worker: labs/running-first-worker.md
       - Events and Event Handlers: labs/eventhandlers.md
-      - Kitchensink: labs/kitchensink.md
+      - Kitchen Sink: labs/kitchensink.md
+  - Documentation: 
+    - Architecture: 
+      - Overview: architecture/overview.md
+      - Task Lifecycle: architecture/tasklifecycle.md
+    - API Specification: apispec.md
+    - Configuration:
+      - Task Definition: configuration/taskdef.md
+      - Worker Definition: configuration/workerdef.md
+      - Workflow Definition: configuration/workflowdef.md
+      - System Tasks: configuration/systask.md
+      - System Operators: configuration/sysoperator.md
+      - Event Handlers: configuration/eventhandlers.md
+      - Task Domains: configuration/taskdomains.md
+      - Isolation Groups: configuration/isolationgroups.md
+    - Operators:
+      -  Do-While: reference-docs/do-while-task.md
+      -  Dynamic: reference-docs/dynamic-task.md
+      -  Dynamic Fork: reference-docs/dynamic-fork-task.md
+      -  Fork: reference-docs/fork-task.md
+      -  Join:    reference-docs/join-task.md
+      -  Set Variable:  reference-docs/set-variable-task.md
+      -  Start Workflow: reference-docs/start-workflow-task.md
+      -  Sub Workflow: reference-docs/sub-workflow-task.md
+      -  Switch: reference-docs/switch-task.md
+      -  Terminate: reference-docs/terminate-task.md
+      -  Wait: reference-docs/wait-task.md
+    - System Tasks:
+      - Event Task: reference-docs/event-task.md
+      - HTTP Task: reference-docs/http-task.md
+      - Inline Task: reference-docs/inline-task.md
+      - JSON JQ Transform Task: reference-docs/json-jq-transform-task.md
+      - Kafka Publish Task: reference-docs/kafka-publish-task.md
+    - Conductor Metrics:
+      - Server Metrics: metrics/server.md
+      - Client Metrics: metrics/client.md
+    - Advanced Topics:
+      - Extending Conductor: extend.md
+      - Annotation Processor: reference-docs/annotation-processor.md
+      - Archival of Workflows: reference-docs/archival-of-workflows.md
+      - Azure Blog Storage: reference-docs/azureblob-storage.md
+      - External Payload Storage: externalpayloadstorage.md
+      - Redis: reference-docs/redis.md
+    - Polyglot SDKs:
+      - Python SDK: how-tos/python-sdk.md
     - Best Practices: bestpractices.md
     - FAQ: faq.md
     - Directed Acyclic Graph: reference-docs/directed-acyclic-graph.md
     - Technical Details: technicaldetails.md
-    - License: license.md
   - Resources:
     - Contributing: resources/contributing.md
     - Code of Conduct: resources/code-of-conduct.md
     - Related Projects: resources/related.md
+    - License: resources/license.md
 theme: 
   name: mkdocs
   custom_dir: theme/
