--- a/springboot-bom-overrides.gradle
+++ b/springboot-bom-overrides.gradle
@@ -12,10 +12,10 @@
  */
 
 // Contains overrides for Spring Boot Dependency Management plugin
-// Dependency version override properties can be found at https://docs.spring.io/spring-boot/docs/2.6.6/reference/htmlsingle/#appendix.dependency-versions.properties
+// Dependency version override properties can be found at https://docs.spring.io/spring-boot/docs/2.6.7/reference/htmlsingle/#appendix.dependency-versions.properties
 
-// Conductor's default is ES6, but SB 2.6.6 brings in ES7
+// Conductor's default is ES6, but SB brings in ES7
 ext['elasticsearch.version'] = revElasticSearch6
 
-// SB 2.6.6 brings groovy 3.0.x which is not compatible with Spock
+// SB brings groovy 3.0.x which is not compatible with Spock
 ext['groovy.version'] = revGroovy
