--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -87,8 +87,12 @@ nav:
       - Azure Blog Storage: reference-docs/azureblob-storage.md
       - External Payload Storage: externalpayloadstorage.md
       - Redis: reference-docs/redis.md
-    - Polyglot SDKs:
+    - SDKs:
+      - CSharp SDK: how-tos/csharp-sdk.md
+      - Clojure SDK: how-tos/clojure-sdk.md
+      - Go SDK: how-tos/go-sdk.md
       - Python SDK: how-tos/python-sdk.md
+      
     - Best Practices: bestpractices.md
     - FAQ: faq.md
     - Directed Acyclic Graph: reference-docs/directed-acyclic-graph.md
