handle 204 during GET

--- a/client/build.gradle
+++ b/client/build.gradle
@@ -16,8 +16,9 @@ configurations.all {
 }
 
 dependencies {
-    implementation project(':conductor-common')
+    compileOnly 'org.jetbrains:annotations:23.0.0'
 
+    implementation project(':conductor-common')
     implementation "com.sun.jersey:jersey-client:${revJersey}"
 
     implementation "com.netflix.spectator:spectator-api:${revSpectator}"
