added missing runtime dependencies for the Jersey client.
NOTE: Jackson 2.13.1 recommended by SB is not compatible with jersey-client 1.x that is used by conductor-client module

--- a/test-harness/build.gradle
+++ b/test-harness/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     testImplementation "org.elasticsearch.client:elasticsearch-rest-high-level-client"
 
     testImplementation "org.testcontainers:elasticsearch:${revTestContainer}"
+    testImplementation "javax.ws.rs:javax.ws.rs-api:${revJAXRS}"
+    testImplementation "org.glassfish.jersey.core:jersey-common:${revJerseyCommon}"
 }
