added junit-vintage-engine and dependency updates

--- a/build.gradle
+++ b/build.gradle
@@ -126,6 +126,7 @@ allprojects {
         testImplementation('org.springframework.boot:spring-boot-starter-test')
         testImplementation('org.springframework.boot:spring-boot-starter-log4j2')
         testImplementation 'junit:junit'
+        testImplementation "org.junit.vintage:junit-vintage-engine"
     }
 
     // processes additional configuration metadata json file as described here
