--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -59,3 +59,8 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.COMMUNITY_REPO_TRIGGER }}" \
             -X POST https://api.github.com/repos/Netflix/conductor-community/dispatches \
             -d '{"event_type": "publish_build","client_payload": {"tag":"'"$TAG"'"}}'
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v3
+        if: always() # always run even if the previous step fails
+        with:
+          report_paths: '**/build/test-results/test/TEST-*.xml'
