--- a/core/build.gradle
+++ b/core/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compileOnly 'org.springframework.boot:spring-boot-starter'
     compileOnly 'org.springframework.boot:spring-boot-starter-validation'
     compileOnly 'org.springframework.retry:spring-retry'
+    compileOnly 'org.springframework.boot:spring-boot-starter-aop'
 
     implementation "com.fasterxml.jackson.core:jackson-annotations"
     implementation "com.fasterxml.jackson.core:jackson-databind"
@@ -51,6 +52,7 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-validation'
     testImplementation 'org.springframework.retry:spring-retry'
+    testImplementation 'org.springframework.boot:spring-boot-starter-aop'
     testImplementation project(':conductor-common').sourceSets.test.output
 
     testImplementation "org.codehaus.groovy:groovy-all:${revGroovy}"
