--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -53,4 +53,5 @@ ext {
     revSpock = '1.3-groovy-2.5'
     revSpotifyCompletableFutures = '0.3.3'
     revTestContainer = '1.15.3'
+    revGraalVM = '22.3.3'
 }
