feat(#2312): replace Nashorn with GraalVM JS Engine
this is required for JDK 15+ compatibility
(Nashorn was removed in JDK 15)

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -52,4 +52,5 @@ ext {
     revSpock = '1.3-groovy-2.5'
     revSpotifyCompletableFutures = '0.3.3'
     revTestContainer = '1.15.3'
+    revGraalVM = '22.2.0'
 }
