--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
 	repositories {
         jcenter()
+        mavenCentral()
     }
 
     dependencies {
@@ -26,10 +27,11 @@ allprojects {
 
     repositories {
         jcenter()
+        mavenCentral()
 
         // oss-candidate for -rc.* verions:
         maven {
-            url "https://dl.bintray.com/netflixoss/oss-candidate"
+            url "https://mvnrepository.com/artifact"
         }
     }
 }
