PSQL External payload storage deduplication (#92)
PSQL External payload storage deduplication

Signed-off-by: Simon Misencik <simon.misencik@gmail.com>

--- a/postgres-external-storage/build.gradle
+++ b/postgres-external-storage/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.flywaydb:flyway-core'
     implementation "org.springdoc:springdoc-openapi-ui:${revOpenapi}"
+    implementation "commons-codec:commons-codec:${revCodec}"
 
     testImplementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation "org.testcontainers:postgresql:${revTestContainer}"
